--- a/hugo.toml
+++ b/hugo.toml
@@ -43,6 +43,12 @@ buildExpired = false
   url = "/tags/"
   weight = 20
 
+[[menu.main]]
+  identifier = "newsletter"
+  name = "newsletter"
+  url = "#newsletter-dialog"
+  weight = 30
+
 [markup.highlight]
   noClasses = false
   lineNos = false
